# alpespartners

./: .gitignore  AlpesPartners.postman_collection.json  AlpesPartners_Cloud.postman_collection.json  README.md  docker-compose.yml  partner.Dockerfile  pyproject.toml
src/alpespartners/api/: __init__.py  campañas.py
src/bff/: Dockerfile  comandos.py  consumidores.py  despachadores.py  eventos.py  main.py  utils.py
src/campaign/: Dockerfile  main.py
src/campaign/config/: api.py  uow.py
src/campaign/modulos/aplicacion/: __init__.py  handlers.py
src/campaign/modulos/dominio/: entidades.py  eventos.py  excepciones.py  fabricas.py  objetos_valor.py  repositorios.py
src/campaign/modulos/infraestructura/: __init__.py  consumidores.py  despachadores.py  dto.py  excepciones.py  fabricas.py  mapeadores.py  repositorios.py
src/campaign/seedwork/aplicacion/: sagas.py
src/campaign/seedwork/dominio/: eventos.py
src/campaign/seedwork/infraestructura/: uow.py
src/partner/: Dockerfile  main.py
src/partner/api/v1/: router.py
src/partner/config/: api.py  db.py  uow.py
src/partner/modulos/aplicacion/: __init__.py  handlers.py
src/partner/modulos/dominio/: entidades.py  eventos.py  excepciones.py  fabricas.py  objetos_valor.py  repositorios.py
src/partner/modulos/infraestructura/: __init__.py  consumidores.py  despachadores.py  dto.py  excepciones.py  fabricas.py  mapeadores.py  repositorios.py
src/traking/: Dockerfile  main.py  requirements.txt
src/traking/config/: api.py  db.py  uow.py
src/traking/modulos/dominio/: eventos.py  (+5 more)
tests/unit/api/: test_api.py
(+83 files in other folders)
